@@ -547,6 +547,7 @@ extambient(		/* extrapolate value at pv, nv */
 	FVECT  uvw[3]
 )
 {
+	const double	min_d = 0.05;
 	static FVECT	my_uvw[3];
 	FVECT		v1;
 	int		i;
@@ -566,13 +567,11 @@ extambient(		/* extrapolate value at pv, nv */
 	for (i = 3; i--; )
 		d += v1[i] * (ap->gdir[0]*uvw[0][i] + ap->gdir[1]*uvw[1][i]);
 	
-	if (d <= 0.0) {
-		setcolor(cr, 0.0, 0.0, 0.0);
-		return(0);		/* should not use if we can avoid it */
-	}
+	if (d < min_d)			/* should not use if we can avoid it */
+		d = min_d;
 	copycolor(cr, ap->val);
 	scalecolor(cr, d);
-	return(1);
+	return(d > min_d);
 }
 
 
